--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid1.mp4" width="100%" height="100%" controls></video>
-								<h3>Foxy Kingdom</h3>
+								<h3><a href="https://github.com/aliaboshady/Foxy-Kingdom" target="_blank">Foxy Kingdom</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid2.mp4" width="100%" height="100%" controls></video>
-								<h3>Space Frogger</h3>
+								<h3><a href="https://github.com/aliaboshady/Space-Frogger" target="_blank">Space Frogger</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid3.mp4" width="100%" height="100%" controls></video>
-								<h3>Village Defenders</h3>
+								<h3><a href="https://github.com/aliaboshady/Village-Defenders" target="_blank">Village Defenders</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid5.mp4" width="100%" height="100%" controls></video>
-								<h3>Laser Defender</h3>
+								<h3><a href="https://github.com/aliaboshady/Laser-Defender" target="_blank">Laser Defender</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid6.mp4" width="100%" height="100%" controls></video>
-								<h3>NeuroEvolution Flappy Bird</h3>
+								<h3><a href="https://github.com/aliaboshady/NeuroEvolution-Flappy-Bird" target="_blank">NeuroEvolution Flappy Bird</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
@@ -75,7 +75,7 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid4.mp4" width="100%" height="100%" controls></video>
-								<h3>Tribenity</h3>
+								<h3><a href="https://github.com/aliaboshady/Tribenity" target="_blank">Tribenity</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
@@ -93,49 +93,49 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid7.mp4" width="100%" height="100%" controls></video>
-								<h3>AA</h3>
+								<h3><a href="https://github.com/aliaboshady/AA" target="_blank">AA</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video"src="images/thumbs/vid9.mp4" width="100%" height="100%" controls></video>
-								<h3>Balance Race</h3>
+								<h3><a href="https://github.com/aliaboshady/Balance-Race" target="_blank">Balance Race</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video  class="image fit thumb video"src="images/thumbs/vid10.mp4" width="100%" height="100%" controls></video>
-								<h3>Block Crusher</h3>
+								<h3><a href="https://github.com/aliaboshady/Block-Crusher" target="_blank">Block Crusher</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid11.mp4" width="100%" height="100%" controls></video>
-								<h3>Blockerz</h3>
+								<h3><a href="https://github.com/aliaboshady/Blockerz" target="_blank">Blockerz</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid12.mp4" width="100%" height="100%" controls></video>
-								<h3>Bubble Strugle</h3>
+								<h3><a href="https://github.com/aliaboshady/Bubble-Strugle" target="_blank">Bubble Strugle</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid13.mp4" width="100%" height="100%" controls></video>
-								<h3>Color Swatch</h3>
+								<h3><a href="https://github.com/aliaboshady/Color-Swatch" target="_blank">Color Swatch</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid14.mp4" width="100%" height="100%" controls></video>
-								<h3>Dodge The Blocks</h3>
+								<h3><a href="https://github.com/aliaboshady/Dodge-The-Blocks" target="_blank">Dodge The Blocks</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid8.mp4" width="100%" height="100%" controls></video>
-								<h3>Really Angry Birds</h3>
+								<h3><a href="https://github.com/aliaboshady/Really-Angry-Birds" target="_blank">Really Angry Birds</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
