--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
 						<header class="major">
 							<h2>A little about myself</h2>
 						</header>
-						<p>Hi, I'm Ali Aboshady. I'm a computer engineer who's passionate about making video games</p>
+						<p>
+							Hi, I'm Ali. I'm a computer engineer who's passionate about making video games.<br>
+							I've been working with Unity for a few years, mainly focusing on learning the engine and how to make games.
+							Now, I'm learning software design patterns and test driven development to help me improve code readability, 
+							scalability, and refactoring.<br>
+							I'm also interested in artificial intelligence, which includes machine learning, deep learning, computer vision, and so on.
+							And I actually used some of these concepts in games, like in Flappy Bird that you'll see in the 'Recent Work' section.<br>
+							Feel free to hit me up with questions or comments, or just to chat!
+						</p>
+					</section>
+
+					<section id="one">
+						<header class="major">
+							<h2>Skills</h2>
+						</header>
+						<p>
+							
+						</p>
 					</section>
 
 				<!-- Two -->
