--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 						<h4 style="color: rgb(155, 155, 155);">Background</h4>
 						<p>
 							•	Bachelors in Computer Engineering<br>
-							•	Masters in Data Science
+							•	Masters in Data Science<br>
+							•	Internship - Lead programmer at Black Cat Entertainment
 						</p>
 
 						<h4 style="color: rgb(155, 155, 155);">Skills</h4>
@@ -59,108 +60,118 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Work</h2>
+						<p style="margin-bottom: 50px;">These are the games I'm most proud of (till now).
+							I spend some time on these games trying to polish and improve some of the mechanics that I already knew.
+							Some have better movement and jumping mechanics, some have better UI, and some have better optimized code.</p>
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid1.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Foxy-Kingdom" target="_blank" class="icon brands fa-github"> Foxy Kingdom</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p> It's a 2D platformer about a fox that just wants to go home.
+									Spent most of the time on the jumping mechanics.
+								</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid2.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Space-Frogger" target="_blank" class="icon brands fa-github"> Space Frogger</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>One of the earliest games. 2D platformer with 3D models.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid3.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Village-Defenders" target="_blank" class="icon brands fa-github"> Village Defenders</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>2D top down tower defense game. Enemies get harder to kill as the waves increase.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid5.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Laser-Defender" target="_blank" class="icon brands fa-github"> Laser Defender</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Another one of those 2D games where you casually take your ship to space to fight alien enemies. No biggie!</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid6.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/NeuroEvolution-Flappy-Bird" target="_blank" class="icon brands fa-github"> NeuroEvolution Flappy Bird</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p> A Flappy Bird game for which the birds learn to play on their own using NeuroEvolution,
+									which is a mix between Genetic Algorithm and Deep Neural Networks.
+								</p>
 							</article>
 
 						</div>
 
 						<br>
 						<h2>In Progress</h2>
+						<p style="margin-bottom: 50px;">Currently working on these games. They might still have some bugs or look unpolished.
+							That's because they are nowhere to being finished.</p>
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid4.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Tribenity" target="_blank" class="icon brands fa-github"> Tribenity</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p> It's a 3D RPG. Haven't done a lot of the level design yet. Still working on the mechanics in a sandbox scene.
+									I will add weapons and a dialog system soon.
+								</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid15.mp4" width="100%" height="100%" controls></video>
 								<h3>Super Canary</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p> The project I'm working on in my internship.
+									It's about a Canary that is trying to rescue miners from beasts in the cave.
+									Added some weapons and mechanics, but there's a lot more to do.
+									<b style="font-weight: 600;">Can't post repository link due to copy rights.</b>
+								</p>
 							</article>
 
 						</div>
 
 						<br>
 						<h2>Mini Concepts</h2>
+						<p style="margin-bottom: 50px;">I made these games in the very beginning when I first started learning game development.
+							They are small games that got me started and got my hands dirty. They aren't polished or written with the best code practices at all.
+							But it was really helpful for my learning journey to copy other games' mechanics to understand how they were made.</p>
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid7.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/AA" target="_blank" class="icon brands fa-github"> AA</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video"src="images/thumbs/vid9.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Balance-Race" target="_blank" class="icon brands fa-github"> Balance Race</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video  class="image fit thumb video"src="images/thumbs/vid10.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Block-Crusher" target="_blank" class="icon brands fa-github"> Block Crusher</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid11.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Blockerz" target="_blank" class="icon brands fa-github"> Blockerz</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid12.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Bubble-Strugle" target="_blank" class="icon brands fa-github"> Bubble Strugle</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid13.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Color-Swatch" target="_blank" class="icon brands fa-github"> Color Swatch</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid14.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Dodge-The-Blocks" target="_blank" class="icon brands fa-github"> Dodge The Blocks</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid8.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Really-Angry-Birds" target="_blank" class="icon brands fa-github"> Really Angry Birds</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 
 							<!--<article class="col-6 col-12-xsmall work-item">
@@ -175,9 +186,9 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>-->
 						</div>
-						<ul class="actions">
+						<!--<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul>-->
 					</section>
 
 				<!-- Three -->
