front-end edits

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<h1 style="font-size: medium;">
 
 						<div style="font-size: 3ch;"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a></div><br>
-						<div class="icon solid fa-envelope"><span style="padding-left: 1ch;">ali_aboshady@hotmail.com</span></div><br>
+						<div class="icon solid fa-envelope"><span style="padding-left: 1ch;">ali_aboshady@hotmail.com</span></div>
 						<div class="icon solid fa-mobile-alt"><span style="padding-left: 1ch;">+44 07751559084</span></div><br>
 						
 						<h4 style="color: rgb(155, 155, 155);">Background</h4>
@@ -40,7 +40,7 @@
 
 		<!-- Main -->
 			<div id="main">
-
+		<h1> Game Developer </h1>
 				<!-- One -->
 					<section id="one">
 						<header class="major">
