Made some edits

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Ali Aboshady - Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,7 +40,7 @@
 
 		<!-- Main -->
 			<div id="main">
-		<h1> Game Developer </h1>
+		<h1 style="font-weight: 800; font-size: 40px;"> A Game Developer's Portfolio </h1>
 				<!-- One -->
 					<section id="one">
 						<header class="major">
