--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1 style="font-size: medium;">
 
-						<div style="font-size: 3ch;"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a></div><br>
-						<div class="icon solid fa-envelope"><span style="padding-left: 1ch;">ali_aboshady@hotmail.com</span></div>
-						<div class="icon solid fa-mobile-alt"><span style="padding-left: 1ch;">+44 07751559084</span></div><br>
+						<div style="font-size: 3ch; color: rgb(223, 223, 223);"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a></div><br>
+						<div style="color: rgb(223, 223, 223);" class="icon solid fa-envelope"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">ali_aboshady@hotmail.com</span></div>
+						<div style="color: rgb(223, 223, 223);" class="icon solid fa-mobile-alt"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">+44 07751559084</span></div><br>
 						
-						<h4 style="color: rgb(155, 155, 155);">Background</h4>
+						<h4 style="color: rgb(223, 223, 223);">Background</h4>
 						<p>
 							•	Bachelors in Computer Engineering<br>
 							•	Masters in Data Science<br>
 							•	Internship - Lead programmer at Black Cat Entertainment
 						</p>
 
-						<h4 style="color: rgb(155, 155, 155);">Skills</h4>
+						<h4 style="color: rgb(223, 223, 223);">Skills</h4>
 						<p>
 							•	C, C++, C#, Python, Java<br>
 							•	Unity, Pygame<br>
