Decreased padding and centered image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<div style="text-align: center;"><img src="images/avatar.jpg" class="image avatar"></div>
 					<h1 style="font-size: medium;">
 
 						<div style="font-size: 3ch; color: rgb(223, 223, 223);"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a></div><br>
@@ -22,7 +22,7 @@
 						<h4 style="color: rgb(223, 223, 223);">Background</h4>
 						<p>
 							•	Bachelors in Computer Engineering<br>
-							•	Masters in Data Science<br>
+							•	Masters in Data Science and Computational Intelligence<br>
 							•	Internship - Lead programmer at Black Cat Entertainment
 						</p>
 
