--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 					<div style="text-align: center;"><img src="images/avatar.jpg" class="image avatar"></div>
 					<h1 style="font-size: medium;">
 
-						<div style="font-size: 3ch; color: rgb(223, 223, 223);"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a></div><br>
+						<div style="font-size: 4ch; color: rgb(223, 223, 223);"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a></div><br>
+						<p style="font-size: 25px;">Junior Game Developer</p>
 						<div style="color: rgb(223, 223, 223);" class="icon solid fa-envelope"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">ali_aboshady@hotmail.com</span></div>
 						<div style="color: rgb(223, 223, 223);" class="icon solid fa-mobile-alt"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">+44 07751559084</span></div><br>
 						
@@ -40,7 +41,7 @@
 
 		<!-- Main -->
 			<div id="main">
-		<h1 style="font-weight: 800; font-size: 40px;"> A Game Developer's Portfolio </h1>
+		<h1 style="font-weight: 800; font-size: 50px;">Portfolio</h1>
 				<!-- One -->
 					<section id="one">
 						<header class="major">
@@ -61,7 +62,7 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<p style="margin-bottom: 50px;">These are the games I'm most proud of (till now).
-							I spend some time on these games trying to polish and improve some of the mechanics that I already knew.
+							I spent some time on these games trying to polish and improve some of the mechanics that I already knew.
 							Some have better movement and jumping mechanics, some have better UI, and some have better optimized code.</p>
 						<div class="row">
 
