Made bettere descriptions

--- a/index.html
+++ b/index.html
@@ -63,39 +63,44 @@
 						<h2>Recent Work</h2>
 						<p style="margin-bottom: 50px;">These are the games I'm most proud of (till now).
 							I spent some time on these games trying to polish and improve some of the mechanics that I already knew.
-							Some have better movement and jumping mechanics, some have better UI, and some have better optimized code.</p>
-						<div class="row">
+							Some of the aspects that I was working on perfecting were jumping mechanics, UI elements, and code optimization.</p>
+							<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid1.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Foxy-Kingdom" target="_blank" class="icon brands fa-github"> Foxy Kingdom</a></h3>
-								<p> It's a 2D platformer about a fox that just wants to go home.
-									Spent most of the time on the jumping mechanics.
+								<p> It's a 2D platformer about a fox that is trying to collect cherries to feed his family.
+									He encounters wild animals that want to steal his food. The poor fox just wants to go home!
 								</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid2.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Space-Frogger" target="_blank" class="icon brands fa-github"> Space Frogger</a></h3>
-								<p>One of the earliest games. 2D platformer with 3D models.</p>
+								<p> This is a 2D procedurally generated endless runner. It's about a post apocalyptic world due to nuclear war that happens in the future.
+									It mutates people into reptiles. It's also ruled killer robots. Our hero is trying to reach the time machine at
+									the end of the platform to go back in time and stop the war. Little does he know, he's in an infinite loop made by the same time machine.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid3.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Village-Defenders" target="_blank" class="icon brands fa-github"> Village Defenders</a></h3>
-								<p>2D top down tower defense game. Enemies get harder to kill as the waves increase.</p>
+								<p> A 2D top down tower defense game, where an army of the dead is sent by the dark lord to conquer the village.
+									Enemies get harder to kill as the waves increase.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid5.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Laser-Defender" target="_blank" class="icon brands fa-github"> Laser Defender</a></h3>
-								<p>Another one of those 2D games where you casually take your ship to space to fight alien enemies. No biggie!</p>
+								<p>	After uncovering the plans of an alien race to use the newly created space warp technology to rule the galaxy,
+									an earthling spaceship captain stole the device to bring it back to earth, only to be chased by the alien army.
+								</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid6.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/NeuroEvolution-Flappy-Bird" target="_blank" class="icon brands fa-github"> NeuroEvolution Flappy Bird</a></h3>
-								<p> A Flappy Bird game for which the birds learn to play on their own using NeuroEvolution,
+								<p> Because I was bad at playing Flappy Bird, I made one for which the birds learn to play on their own using NeuroEvolution,
 									which is a mix between Genetic Algorithm and Deep Neural Networks.
 								</p>
 							</article>
@@ -104,14 +109,16 @@
 
 						<br>
 						<h2>In Progress</h2>
-						<p style="margin-bottom: 50px;">Currently working on these games. They might still have some bugs or look unpolished.
+						<p style="margin-bottom: 50px;">Currently working on these games. They are still looking unpolished and in need of more design.
 							That's because they are nowhere to being finished.</p>
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid4.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Tribenity" target="_blank" class="icon brands fa-github"> Tribenity</a></h3>
-								<p> It's a 3D RPG. Haven't done a lot of the level design yet. Still working on the mechanics in a sandbox scene.
+								<p> It's an RPG, where the hero seeks to take back his rightful throne after his uncle betrayed the hero's father stole the throne.
+									In his quest, he will learn to combat using different weapons, as well as learn magic and spells.
+									Currently, I'm still working on the mechanics in a sandbox scene.
 									I will add weapons and a dialog system soon.
 								</p>
 							</article>
@@ -131,8 +138,8 @@
 						<br>
 						<h2>Mini Concepts</h2>
 						<p style="margin-bottom: 50px;">I made these games in the very beginning when I first started learning game development.
-							They are small games that got me started and got my hands dirty. They aren't polished or written with the best code practices at all.
-							But it was really helpful for my learning journey to copy other games' mechanics to understand how they were made.</p>
+							They are small games that got me started and got my hands dirty. Each one of these games gave me experience in a particular mechanic
+							or a tool in Unity. This was really helpful for my learning journey because I learned a lot copying other games and understood how they were made.</p>
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
