Added descriptions to mini games

--- a/index.html
+++ b/index.html
@@ -145,41 +145,49 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid7.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/AA" target="_blank" class="icon brands fa-github"> AA</a></h3>
+								<p>A game where you need to throw as many arrows as possible without hitting the other arrows.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video"src="images/thumbs/vid9.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Balance-Race" target="_blank" class="icon brands fa-github"> Balance Race</a></h3>
+								<p>You're driving a car on a hill, while bypassing obstacles to get to the other side where the flag is.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video  class="image fit thumb video"src="images/thumbs/vid10.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Block-Crusher" target="_blank" class="icon brands fa-github"> Block Crusher</a></h3>
+								<p>Classic block crushing type game where you have to break all blocks.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid11.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Blockerz" target="_blank" class="icon brands fa-github"> Blockerz</a></h3>
+								<p>An infinite runner where you play as a cube and try to avoid all the obstacles.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid12.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Bubble-Strugle" target="_blank" class="icon brands fa-github"> Bubble Strugle</a></h3>
+								<p>In this game you shoot a long laser beam to cut the balls in half. Each ball creates 2 smaller balls when cut.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid13.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Color-Swatch" target="_blank" class="icon brands fa-github"> Color Swatch</a></h3>
+								<p>Based on the game 'Color Switch', you have to make the ball jump through its appropriate color.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid14.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Dodge-The-Blocks" target="_blank" class="icon brands fa-github"> Dodge The Blocks</a></h3>
+								<p>You play as a small block trying to evade avalanche of falling cubes.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/vid8.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Really-Angry-Birds" target="_blank" class="icon brands fa-github"> Really Angry Birds</a></h3>
+								<p>Based on the game 'Angry Birds' where you shoot a bird using a slingshot to destroy your enemies' homes.</p>
 							</article>
 
 							<!--<article class="col-6 col-12-xsmall work-item">
