--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 						<p>
 							•	C, C++, C#, Python, Java<br>
 							•	Unity, Pygame<br>
+							•	Git, Sourcetree<br>
 							•	Scikit-Learn, Keras, OpenCv<br>
 							•	HTML, CSS, Javascript
 						</p>
