Added resume download button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -15,7 +16,7 @@
 					<div style="text-align: center;"><img src="images/avatar.jpg" class="image avatar"></div>
 					<h1 style="font-size: medium;">
 
-						<div style="font-size: 4ch; color: rgb(223, 223, 223);"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a></div><br>
+						<div style="font-size: 4ch; color: rgb(223, 223, 223);"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a> - <a href="images/Resume.pdf" target="_blank" download><button style="font-size:20px">Resume <i class="fa fa-download"></i></a></button></div><br>
 						<p style="font-size: 25px;">Junior Game Developer</p>
 						<div style="color: rgb(223, 223, 223);" class="icon solid fa-envelope"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">ali_aboshady@hotmail.com</span></div>
 						<div style="color: rgb(223, 223, 223);" class="icon solid fa-mobile-alt"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">+44 07751559084</span></div><br>
