Updated resume and added AR Demo

--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
 								</p>
 							</article>
 
+							<article class="col-6 col-12-xsmall work-item">
+								<video class="image fit thumb video" src="images/thumbs/vid16.mp4" width="100%" height="100%" controls></video>
+								<h3><a href="https://github.com/aliaboshady/AR-Assessment" target="_blank" class="icon brands fa-github"> AR Demo</a></h3>
+								<p> This isn't a game per se. It was an AR assessment for a job. And it was my first ever experience with AR.
+									The idea was to have 3 different images to track, and each image had its unique set of characters that the user can scroll through.
+									And when you tap the character, an UI menu appears that show info about them and buttons to control them.
+								</p>
+							</article>
+
 						</div>
 
 						<br>
