--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<p>
 							•	Bachelors in Computer Engineering<br>
 							•	Masters in Data Science and Computational Intelligence<br>
-							•	Internship - Lead programmer at Black Cat Entertainment
+							•	Internship - Game Programmer at Black Cat Entertainment
 						</p>
 
 						<h4 style="color: rgb(223, 223, 223);">Skills</h4>
