--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<h4 style="color: rgb(223, 223, 223);">Skills</h4>
 						<p>
 							•	C, C++, C#, Python, Java<br>
-							•	Unity, Pygame<br>
+							•	Unity, Unreal, Pygame<br>
 							•	Git, Sourcetree<br>
 							•	Scikit-Learn, Keras, OpenCv<br>
 							•	HTML, CSS, Javascript
