--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<h1 style="font-size: medium;">
 
 						<div style="font-size: 4ch; color: rgb(223, 223, 223);"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a> - <a href="images/Resume.pdf" target="_blank" download><button style="font-size:20px">Resume <i class="fa fa-download"></i></a></button></div><br>
-						<p style="font-size: 25px;">Junior Game Developer</p>
+						<p style="font-size: 25px;">Game Developer</p>
 						<div style="color: rgb(223, 223, 223);" class="icon solid fa-envelope"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">ali_aboshady@hotmail.com</span></div>
 						<div style="color: rgb(223, 223, 223);" class="icon solid fa-mobile-alt"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">+44 07751559084</span></div><br>
 						
@@ -26,6 +26,7 @@
 							•	Bachelors in Computer Engineering<br>
 							•	Masters in Data Science and Computational Intelligence<br>
 							•	Internship - Game Programmer at Black Cat Entertainment
+							•	C++ Game Programmer at Inspired Entertainment
 						</p>
 
 						<h4 style="color: rgb(223, 223, 223);">Skills</h4>
