Increased video size

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<p>
 							•	Bachelors in Computer Engineering<br>
 							•	Masters in Data Science and Computational Intelligence<br>
-							•	Internship - Game Programmer at Black Cat Entertainment
+							•	Internship - Game Programmer at Black Cat Entertainment<br>
 							•	C++ Game Programmer at Inspired Entertainment
 						</p>
 
@@ -64,12 +64,10 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>In Progress</h2>
-						<p style="margin-bottom: 50px;">Currently working on these games. They are still looking unpolished and in need of more design.
-							That's because they are nowhere to being finished.</p>
 						<div class="row">
 
-							<article class="col-6 col-12-xsmall work-item">
-								<video class="image fit thumb video" src="images/thumbs/Breachers.mp4" width="100%" height="100%" controls></video>
+							<article class="work-item">
+								<video class="image fit thumb video gamevideo" src="images/thumbs/Breachers.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Breachers" target="_blank" class="icon brands fa-github"> Breachers</a></h3>
 								<p> Breachers is a multiplayer FPS game made using Unreal Engine. Till now, there's a deathmatch mode,
 									and there's a plant and defuse mode that's in progress. While it's very similar to Counter Strike, there are a few new ideas in mind.
