--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							•	C++ Game Programmer at Inspired Entertainment
 						</p>
 
-						<h4 style="color: rgb(223, 223, 223);">Skills</h4>
+						<h4 style="color: rgb(223, 223, 223); padding-top:10px">Skills</h4>
 						<p>
 							•	C, C++, C#, Python, Java<br>
 							•	Unity, Unreal, Pygame<br>
