Added infor role

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 							•	Bachelors in Computer Engineering<br>
 							•	Masters in Data Science and Computational Intelligence<br>
 							•	Internship - Game Programmer at Black Cat Entertainment<br>
-							•	C++ Game Programmer at Inspired Entertainment
+							•	C++ Game Programmer at Inspired Entertainment<br>
+							•	C#/SQL Software Developer at InFor/Lighthouse Systems
 						</p>
 
 						<h4 style="color: rgb(223, 223, 223); padding-top:10px">Skills</h4>
@@ -35,7 +36,7 @@
 							•	Unity, Unreal, Pygame<br>
 							•	Git, Sourcetree<br>
 							•	Scikit-Learn, Keras, OpenCv<br>
-							•	HTML, CSS, Javascript
+							•	HTML, CSS, Javascript, SQL
 						</p>
 						
 					</h1>
@@ -52,7 +53,7 @@
 						</header>
 						<p>
 							Hi, I'm Ali. I'm a computer engineer who's passionate about making video games.<br>
-							I've been working with Unity for a few years, mainly focusing on learning the engine and how to make games.
+							I've been working with Unity and Unreal for a few years, mainly focusing on learning the engine and how to make games.
 							Now, I'm learning software design patterns and test driven development to help me improve code readability, 
 							scalability, and refactoring.<br>
 							I'm also interested in artificial intelligence, which includes machine learning, deep learning, computer vision, and so on.
