--- a/index.html
+++ b/index.html
@@ -64,12 +64,27 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>In Progress</h2>
+						<h2><a href="https://github.com/aliaboshady/Breachers" target="_blank" class="icon brands fa-github"> Breachers</a></h2>
 						<div class="row">
 
+							<article class="col-6 col-12-xsmall work-item-default">
+								<video class="image fit thumb video" src="images/thumbs/Breachers - Deathmatch.mp4" width="100%" height="100%" controls poster="images/thumbs/Breachers - Deathmatch - Thumbnail.png"></video>
+								<h4 class="centered-text">Free For All Deathmatch</h4>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item-default">
+								<video class="image fit thumb video" src="images/thumbs/Breachers - Plant And Defuse.mp4" width="100%" height="100%" controls poster="images/thumbs/Breachers - Plant And Defuse - Thumbnail.png"></video>
+								<h4 class="centered-text">Plant And Defuse</h4>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item-default">
+								<br>
+								<video class="image fit thumb video" src="images/thumbs/Breachers.mp4" width="100%" height="100%" controls></video>
+								<h4 class="centered-text">Early Development - Deathmatch With Friends</h4>
+							</article>
+
 							<article class="work-item">
-								<video class="image fit thumb video gamevideo" src="images/thumbs/Breachers.mp4" width="100%" height="100%" controls></video>
-								<h3><a href="https://github.com/aliaboshady/Breachers" target="_blank" class="icon brands fa-github"> Breachers</a></h3>
+								<br>
 								<p> Breachers is a multiplayer FPS game made using Unreal Engine. Till now, there's a deathmatch mode,
 									and there's a plant and defuse mode that's in progress. While it's very similar to Counter Strike, there are a few new ideas in mind.
 									For example, the bomb will not spawn with the attackers. Instead, it'll spawn somewhere random in the map, and both the attackers and
