Added valorant clone section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,42 @@
 						</div>
 
 						<br>
+
+						<h2>In Progress</h2>
+						<div class="row">
+
+							<article class="work-item">
+								<video class="image fit thumb video gamevideo" src="images/thumbs/Valorant Clone.mp4" width="100%" height="100%" controls></video>
+								<h3>Untitled Valorant Clone</h3>
+								<p> Using Unreal Engine, I'm working on a Valorant clone. Till now, it's very close to the stage which Breachers is at, with the exception of a few things.
+									It has more features that I'm very proud of which are listed below. I'm focusing on making it as polished as possible, so it may take some time to finish.
+									There are a lot more features and content that are on the way, like the abilities, gamemodes, and more UI elements to name a few.
+									<br><br>
+									Here is me and my friend testing the game. Timestamps down below. Enjoy :)
+									<br>
+									•	Better Looking Main Menu 00:00<br>
+									•	Multiplayer Lobby 00:10<br>
+									•	Lobby will be customisable when gamemodes are made 00:16<br>
+									•	Team Overlay Material (Red or Blue) 00:34<br>
+									•	Directional Hit Reaction and Damage Indicator 00:38<br>
+									•	Aim Offset and Turn In Place 00:54<br>
+									•	Aim Down Sight for Rifles and Snipers 1:16<br>
+									•	Weapons don't clip through walls (1st and 3rd person) 1:21<br>
+									•	Spray Pattern and Recoil 1:35<br>
+									•	Shooting Through Walls 1:40<br>
+									•	Weapon Penetration Depending on Surface Material 1:52<br>
+									•	Bullet Decal Depending on Surface Material 2:04<br>
+									•	Blood Splatters if close to a surface 2:10<br>
+									•	Epic Knife Fight! 2:20<br>
+									•	Shotgun reloads one shell at a time - Reload can be interrupted 2:40<br>
+									•	Awesome Bunny Hops! 2:50<br>
+									•	Impact Sound Depending on Surface Material 2:56<br>
+								</p>
+							</article>
+
+						</div>
+
+						<br>
 						
 						<h2>Recent Work</h2>
 						<p style="margin-bottom: 50px;">These are the games I'm most proud of (till now).
