Added bold timestamps

--- a/index.html
+++ b/index.html
@@ -108,25 +108,25 @@
 									It has more features that I'm very proud of which are listed below. I'm focusing on making it as polished as possible, so it may take some time to finish.
 									There are a lot more features and content that are on the way, like the abilities, gamemodes, and more UI elements to name a few.
 									<br><br>
-									Here is me and my friend testing the game. Timestamps down below. Enjoy :)
+									Here is me and my friend testing the game. Timestamps down below. <b>Enjoy :)</b>
 									<br>
-									•	Better Looking Main Menu 00:00<br>
-									•	Multiplayer Lobby 00:10<br>
-									•	Lobby will be customisable when gamemodes are made 00:16<br>
-									•	Team Overlay Material (Red or Blue) 00:34<br>
-									•	Directional Hit Reaction and Damage Indicator 00:38<br>
-									•	Aim Offset and Turn In Place 00:54<br>
-									•	Aim Down Sight for Rifles and Snipers 1:16<br>
-									•	Weapons don't clip through walls (1st and 3rd person) 1:21<br>
-									•	Spray Pattern and Recoil 1:35<br>
-									•	Shooting Through Walls 1:40<br>
-									•	Weapon Penetration Depending on Surface Material 1:52<br>
-									•	Bullet Decal Depending on Surface Material 2:04<br>
-									•	Blood Splatters if close to a surface 2:10<br>
-									•	Epic Knife Fight! 2:20<br>
-									•	Shotgun reloads one shell at a time - Reload can be interrupted 2:40<br>
-									•	Awesome Bunny Hops! 2:50<br>
-									•	Impact Sound Depending on Surface Material 2:56<br>
+									•	Better Looking Main Menu <b>00:00</b><br>
+									•	Multiplayer Lobby <b>00:10</b><br>
+									•	Lobby will be customisable when gamemodes are made <b>00:16</b><br>
+									•	Team Overlay Material (Red or Blue) <b>00:34</b><br>
+									•	Directional Hit Reaction and Damage Indicator <b>00:38</b><br>
+									•	Aim Offset and Turn In Place <b>00:54</b><br>
+									•	Aim Down Sight for Rifles and Snipers <b>1:16</b><br>
+									•	Weapons don't clip through walls (1st and 3rd person) <b>1:21</b><br>
+									•	Spray Pattern and Recoil <b>1:35</b><br>
+									•	Shooting Through Walls <b>1:40</b><br>
+									•	Weapon Penetration Depending on Surface Material <b>1:52</b><br>
+									•	Bullet Decal Depending on Surface Material <b>2:04</b><br>
+									•	Blood Splatters if close to a surface <b>2:10</b><br>
+									•	Epic Knife Fight! <b>2:20</b><br>
+									•	Shotgun reloads one shell at a time - Reload can be interrupted <b>2:40</b><br>
+									•	Awesome Bunny Hops! <b>2:50</b><br>
+									•	Impact Sound Depending on Surface Material <b>2:56</b><br>
 								</p>
 							</article>
 
