Added descriptions to the new games

--- a/index.html
+++ b/index.html
@@ -72,51 +72,44 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/Jungle Slot.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Tribenity" target="_blank" class="icon brands fa-github"> Jungle Slot</a></h3>
-								<p> It's an RPG, where the hero seeks to take back his rightful throne after his uncle betrayed the hero's father stole the throne.
-									In his quest, he will learn to combat using different weapons, as well as learn magic and spells.
-									Currently, I'm still working on the mechanics in a sandbox scene.
-									I will add weapons and a dialog system soon.
+								<p> It's a simple slot machine game. You can spin and depending on the reels' combination, you could win money!
+									There are 7 win lines that you can see in the video at 00:34. You can also change the bet/stake 00:38.
+									And there's an info page that tells you how much you can win depending on the symbol, which update when the bet is changed.
 								</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/Total Tetris.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Tribenity" target="_blank" class="icon brands fa-github"> Total Tetris</a></h3>
-								<p> The project I'm working on in my internship.
-									It's about a Canary that is trying to rescue miners from beasts in the cave.
-									Added some weapons and mechanics, but there's a lot more to do.
-									<b style="font-weight: 600;">Can't post repository link due to copy rights.</b>
+								<p> This is like normal Tetris, except shapes are selected by choice from the bottom instead of random ones falling down.
+									You can also clear lines horizontally as well as vertically. If there is a shape that doesn't fit, 
+									it'll be disabled until you clear out a place for it. If all shapes don't fit, you lose the game!
 								</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/Cave Escape.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Foxy-Kingdom" target="_blank" class="icon brands fa-github"> Cave Escape</a></h3>
-								<p> It's a 2D platformer about a fox that is trying to collect cherries to feed his family.
-									He encounters wild animals that want to steal his food. The poor fox just wants to go home!
+								<p> Our hero is trying to escape with his life from a cave with running molten lava, collecting coins while at it!
 								</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/Quick Blocks.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Space-Frogger" target="_blank" class="icon brands fa-github"> Quick Blocks</a></h3>
-								<p> This is a 2D procedurally generated endless runner. It's about a post apocalyptic world due to nuclear war that happens in the future.
-									It mutates people into reptiles. It's also ruled killer robots. Our hero is trying to reach the time machine at
-									the end of the platform to go back in time and stop the war. Little does he know, he's in an infinite loop made by the same time machine.</p>
+								<p> Try to click on the same colored block as the one in the middle, before the timer runs out.
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/Castle Siege.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Village-Defenders" target="_blank" class="icon brands fa-github"> Castle Siege</a></h3>
-								<p> A 2D top down tower defense game, where an army of the dead is sent by the dark lord to conquer the village.
-									Enemies get harder to kill as the waves increase.</p>
+								<p> The goal of this game is to hit the moving target to breach the castle! Hit it multiple times, and guards will show up.</p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb video" src="images/thumbs/Celestial Stairs.mp4" width="100%" height="100%" controls></video>
 								<h3><a href="https://github.com/aliaboshady/Laser-Defender" target="_blank" class="icon brands fa-github"> Celestial Stairs</a></h3>
-								<p>	After uncovering the plans of an alien race to use the newly created space warp technology to rule the galaxy,
-									an earthling spaceship captain stole the device to bring it back to earth, only to be chased by the alien army.
+								<p>	Steer the boucning ball right and left to collect stars, and try not to fall into the void.
 								</p>
 							</article>
 						</section>
